# git-select-branch

./: Cargo.toml  README.md
.github/workflows/: check.yaml  release.yaml
scripts/: prepare-release-files.sh
src/: config.rs  main.rs  test.rs
