[package]
name = "git-select-branch"
description = "Tiny CLI utility to checkout a recent git branch interactively"
version = "0.1.3"
authors = ["Daniel Ström <D@nielstrom.se>"]
edition = "2018"
license = "MIT OR Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
dialoguer = "0.8.0"
expect-exit = "0.5.2"
git2 = "0.16.0"
tempfile = "3.3.0"
