[package]
name = "git-select-branch"
description = "Tiny CLI utility to checkout a recent git branch interactively"
version = "0.2.0"
authors = ["Daniel Ström <D@nielstrom.se>"]
edition = "2018"
license = "MIT OR Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = {version = "0.10.2", features = ["fuzzy-select"]}
anyhow = {version = "1.0.68", features = ["backtrace"]}
expect-exit = "0.5.2"
git2 = "0.16.0"
ctrlc = "3.2.4"
thiserror = "1.0.38"

[dev-dependencies]
tempfile = "3.3.0"
