[package]
name = "git-select-branch"
description = "Tiny CLI utility to checkout a recent git branch interactively"
documentation = "https://docs.rs/crate/git-select-branch"
repository = "https://github.com/dnjstrom/git-select-branch"
homepage = "https://github.com/dnjstrom/git-select-branch"
version = "0.2.0"
authors = ["Daniel Ström <D@nielstrom.se>"]
edition = "2018"
license = "MIT OR Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = {version = "0.10.2", features = ["fuzzy-select"]}
anyhow = {version = "1.0.68", features = ["backtrace"]}
expect-exit = "0.5.2"
git2 = "0.16.0"
ctrlc = "3.2.4"
thiserror = "1.0.38"

[dev-dependencies]
tempfile = "3.3.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.5"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]
